sensor_values/log/build_2021-04-09_18-21-40/sensor_values/stderr.log
  File "/home/paul/sensor_values/install/sensor_values/lib/python3.8/site-packages/sensor_values/values_input.py", line 19
    100)
    ^
SyntaxError: positional argument follows keyword argument

